# customer_satisfaction_ai

./: .gitattributes  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py
customer_satisfaction_ai/: _version.py
customer_satisfaction_ai.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
customer_satisfaction_ai/airlinesat/: airlinessat2024-02-13 11 19 26.590348.h5  consuexp01.sqbpro  deep_airlinesat_28_01_24_11_34.ipynb  deep_airlinesat_mixed.ipynb  history2024-02-13 11 19 26.590348.csv  kblogi1.py  kbmi.py  mixedata.py  mixedclass01.py  oe.py  oe.txt  oe_importance.txt  oe_one.txt  oechi2.py  query03.csv  satisf01.py  satisf01.txt  sqlite3_airlinessat.html  sqlite3_arlinesat_conn.py
customer_satisfaction_ai/airlinesat/R/: customer03.R
customer_satisfaction_ai/airlinesat/SQL-SQLITE/: query02.1.csv  query05.csv  sqlite33.py
